@@ -1,0 +1,43 @@
+<?php
+$language = array (
+  'simplesaml:error:loggedin' => 'Deze actie kan niet worden uitgevoerd al je bent aangemeld',
+  'simplesaml:error:no_source' => 'Geen SAML connectie gedefinieerd',
+  'simplesaml:error:source_not_enabled' => 'De opgegeven SAML connectie is niet ingeschakeld op deze site',
+  'simplesaml:error:source_mismatch' => 'De opgegeven SAML connectie komt niet overeen met de server connectie',
+  'simplesaml:error:class' => 'Fout tijdens het ophalen van de SAML configuratie: %s',
+  'simplesaml:no_linked_account:title' => 'Geen account gekoppeld aan de SAML connectie: %s',
+  'simplesaml:no_linked_account:description' => 'Er kon geen account worden gevonden dat is gekoppeld aan je SAML acount van %s. Je kunt je account van deze site koppelen door je hieronder aan te melden of te registreren.',
+  'simplesaml:forms:register:description' => 'Als je nog geen account hebt op deze site, kun je er een aanmaken door op de Registreer knop te klikken. Het kan nodig zijn om additionele informatie op te geven.',
+  'simplesaml:no_linked_account:login' => 'Klik hier als je al een account hebt op deze site',
+  'simplesaml:settings:simplesamlphp_path' => 'Pad naar de SimpleSAMLPHP bibliotheek',
+  'simplesaml:settings:simplesamlphp_path:description' => 'Het volledige pad naar de SimpleSAMLPHP (http://simplesamlphp.org) bibliotheek zonder afsluitende slash (/)',
+  'simplesaml:settings:simplesamlphp_directory' => 'Virtuele map van de SimpleSAMLPHP bibliotheek',
+  'simplesaml:settings:simplesamlphp_directory:description' => 'De map waar de SimpleSAMLPHP bibliotheek te vinden is, zonder afsluitende slash (/). Bijvoorbeeld als het volledige pad %ssimplesamlphp/ is, geef dan simplesamlphp op',
+  'simplesaml:settings:sources:name' => 'SAML connectie',
+  'simplesaml:settings:sources:allow_registration' => 'Registratie toestaan',
+  'simplesaml:settings:sources:configuration:title' => 'Configuratie instellingen voor: %s',
+  'simplesaml:settings:sources:configuration:icon' => 'URL naar een icoon voor deze connectie (optioneel)',
+  'simplesaml:settings:sources:configuration:icon:description' => 'Je kunt een URL opgeven naar een icoon voor deze connectie, dit zal gebruikt worden op het aanmeldscherm en bij de gebruikers instellingen.',
+  'simplesaml:settings:sources:configuration:external_id' => 'Veld met de unieke user id van de SAML connectie (optioneel)',
+  'simplesaml:settings:sources:configuration:external_id:description' => 'Als je de unieke user id niet uit de attributen kunt halen, kun je hier een veld iut de AuthData opgeven welke de user id bevat.',
+  'simplesaml:settings:warning:configuration:sources' => 'Er zijn nog geen SAML connecties geconfigureerd',
+  'simplesaml:settings:warning:configuration:simplesamlphp' => 'Geef het pad naar de SimpleSAMLPHP bibliotheek op voor verdere configuratie mogelijkheden',
+  'simplesaml:usersettings:connected' => 'Je account is gekoppeld met de SAML connectie %s. Je kunt je op deze site aanmelden met je SAML account indien je dit wilt.',
+  'simplesaml:usersettings:unlink_url' => 'Klik hier op de koppeling te verwijderen',
+  'simplesaml:usersettings:unlink_confirm' => 'Weet je zeker dat je de koppeling met %s wilt verwijderen',
+  'simplesaml:usersettings:not_connected' => 'Je account is niet gekoppeld met de SAML connectie %s. Als je je wilt aanmelden op deze site met je SAML account, koppel dan aub beide accounts.',
+  'simplesaml:usersettings:link_url' => 'Klik hier om beide accounts te koppelen',
+  'simplesaml:usersettings:no_sources' => 'Er zijn geen SAML koppelingen beschikbaar, vraag de beheerder om dit te configureren.',
+  'simplesaml:widget:description' => 'Toont een aanmeld widget met enkel de SAML koppelingen',
+  'simplesaml:widget:select_source' => 'Selecteer de SAML connectie om te tonen in de widget',
+  'simplesaml:widget:logged_in' => 'Welkom <b>%s</b> op de <b>%s</b> community',
+  'simplesaml:login:no_linked_account' => 'Er is geen account gekoppeld aan de SAML connectie %s',
+  'simplesaml:authorize:error:attributes' => 'Er konden geen attributen worden gevonden vanuit de SAML connectie %s, probeer het nogmaals of neem contact op met de site beheerder',
+  'simplesaml:authorize:error:external_id' => 'Er kon geen unieke identificatie worden gevonden vanuit de SAML connectie %s, probeer het nogmaals of neem contact op met de site beheerder',
+  'simplesaml:authorize:error:link' => 'Er is een onbekende fout opgetreden tijdens het koppelen met de SAML connectie %s',
+  'simplesaml:authorize:success' => 'Je heb je account succesvol gekoppeld met de SAML connectie %s',
+  'simplesaml:action:register:error:displayname' => 'Er is geen weergave naam opgegeven, vul je naam in',
+  'simplesaml:action:unlink:error' => 'Er is een onbekende fout opgetreden tijdens het verwijderen van de koppeling met de SAML connectie %s',
+  'simplesaml:action:unlink:success' => 'De koppeling met de SAML connectie %s is succesvol verwijdered',
+);
+add_translation("nl", $language);
